[gd_scene load_steps=6 format=3 uid="uid://c3mrcmux18trt"]

[ext_resource type="FontFile" uid="uid://mapb028hnase" path="res://Modak-Regular.ttf" id="1_2t3bj"]
[ext_resource type="Script" path="res://game_over.gd" id="1_4mpms"]
[ext_resource type="FontFile" uid="uid://bhxd8g0irveup" path="res://SlacksideOne-Regular.ttf" id="2_mi8k8"]
[ext_resource type="AudioStream" uid="uid://cg2gbc8kce8im" path="res://space-explosion-with-reverb-101449.mp3" id="6_46hv3"]
[ext_resource type="AudioStream" uid="uid://cupip4ddwhj0j" path="res://1212_1_.ogg" id="6_hixyi"]

[node name="Game over" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_4mpms")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_left = -894.0
offset_top = -517.0
offset_right = 3084.0
offset_bottom = 1862.0

[node name="ColorRect2" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -1447.0
offset_right = 1632.0
offset_bottom = 329.0
grow_horizontal = 2
color = Color(0, 0, 0, 0.254902)

[node name="Label" type="Label" parent="."]
top_level = true
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -647.0
offset_right = 647.0
offset_bottom = 390.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/shadow_offset_x = 6
theme_override_constants/shadow_offset_y = 6
theme_override_constants/outline_size = 13
theme_override_constants/shadow_outline_size = 6
theme_override_fonts/font = ExtResource("1_2t3bj")
theme_override_font_sizes/font_size = 256
text = "Game Over"

[node name="Label2" type="Label" parent="."]
top_level = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -284.5
offset_top = -227.0
offset_right = 284.5
offset_bottom = -35.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_mi8k8")
theme_override_font_sizes/font_size = 128
text = "Game Over"

[node name="Button" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -288.0
offset_top = -38.0
offset_right = 285.0
offset_bottom = 156.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0.207843, 0.207843, 0.207843, 1)
theme_override_fonts/font = ExtResource("2_mi8k8")
theme_override_font_sizes/font_size = 128
text = "Play Again"
flat = true

[node name="Button2" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = 193.0
offset_right = 300.0
offset_bottom = 387.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0.298039, 0.298039, 0.298039, 1)
theme_override_fonts/font = ExtResource("2_mi8k8")
theme_override_font_sizes/font_size = 128
text = "Go to Menu"
flat = true

[node name="Button3" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = 193.0
offset_right = 300.0
offset_bottom = 387.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0.298039, 0.298039, 0.298039, 1)
theme_override_fonts/font = ExtResource("2_mi8k8")
theme_override_font_sizes/font_size = 128
text = "Ir al men√∫"
flat = true

[node name="AudioStreamPlayer3" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_46hv3")
volume_db = -6.559
autoplay = true
bus = &"sfx"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_hixyi")
volume_db = -7.59
bus = &"sfx"

[connection signal="focus_entered" from="Button" to="." method="_on_button_focus_entered"]
[connection signal="mouse_entered" from="Button" to="." method="_on_button_mouse_entered"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="focus_entered" from="Button2" to="." method="_on_button_2_focus_entered"]
[connection signal="mouse_entered" from="Button2" to="." method="_on_button_2_mouse_entered"]
[connection signal="pressed" from="Button2" to="." method="_on_button_2_pressed"]
[connection signal="focus_entered" from="Button3" to="." method="_on_button_2_focus_entered"]
[connection signal="mouse_entered" from="Button3" to="." method="_on_button_2_mouse_entered"]
[connection signal="pressed" from="Button3" to="." method="_on_button_2_pressed"]
[connection signal="finished" from="AudioStreamPlayer3" to="." method="_on_audio_stream_player_3_finished"]
